--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -11,8 +11,9 @@ concurrency:
 
 env:
   GO_VERSION: ''
-  HELM_VERSION: v3.13.2
-  SUBMARINER_VERSION: '0.16.2'
+  KIND_VERSION: v0.21.0
+  HELM_VERSION: v3.14.0
+  SUBMARINER_VERSION: '0.16.3'
 
 jobs:
   k8s-conformance-e2e:
@@ -76,7 +77,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -164,7 +165,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -311,7 +312,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -388,7 +389,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -443,7 +444,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -495,7 +496,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -548,7 +549,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -603,7 +604,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -675,7 +676,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -749,7 +750,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -821,7 +822,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -877,7 +878,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -956,7 +957,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1045,7 +1046,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1145,7 +1146,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1210,7 +1211,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install submariner subctl
@@ -1287,7 +1288,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1358,7 +1359,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
