skip e2e case PodHostIPs
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -37,6 +37,7 @@ endif
 
 ifeq ($(E2E_IP_FAMILY),dual)
 K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Feature:IPv6DualStack"
+K8S_CONFORMANCE_E2E_SKIP += "sig-network.*should create pod, add ipv6 and ipv4 ip to host ips.*Feature:PodHostIPs"
 endif
 
 ifeq ($(E2E_CILIUM_CHAINING),true)
