--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1020,7 +1020,7 @@ jobs:
         if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.repository.default_branch }}
+          ref: ${{ github.base_ref || github.ref_name }}
           fetch-depth: 1
           path: test/e2e/source
 
