Makefile: add target kind-install-metallb
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ ovn-ic-1.yaml
 kind.yaml
 kustomization.yaml
 kwok-node.yaml
+metallb-cr.yaml
 broker-info.subm
 broker-info.subm.*
 broker-info-internal.subm
