--- a/.github/workflows/build-kube-ovn-base.yaml
+++ b/.github/workflows/build-kube-ovn-base.yaml
@@ -18,17 +18,22 @@ jobs:
     name: Build AMD64
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        if: (github.event.inputs.branch || matrix.branch) == matrix.branch
         with:
           ref: ${{ matrix.branch }}
-      - uses: docker/setup-buildx-action@v2
+
+      - uses: docker/setup-buildx-action@v3
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
 
       - name: Build
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         run: |
           make base-amd64
           make base-tar-amd64
 
       - name: Upload image to artifact
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         uses: actions/upload-artifact@v4
         with:
           name: image-amd64-${{ matrix.branch }}
@@ -48,20 +53,27 @@ jobs:
     name: Build ARM64
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         with:
           ref: ${{ matrix.branch }}
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/setup-qemu-action@v2
+
+      - uses: docker/setup-buildx-action@v3
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
+
+      - uses: docker/setup-qemu-action@v3
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         with:
           platforms: arm64
 
       - name: Build
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         run: |
           make base-arm64 || make base-arm64
           make base-tar-arm64
 
       - name: Upload image to artifact
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         uses: actions/upload-artifact@v4
         with:
           name: image-arm64-${{ matrix.branch }}
@@ -84,25 +96,31 @@ jobs:
     name: push
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         with:
           ref: ${{ matrix.branch }}
+
       - name: Download image
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         uses: actions/download-artifact@v4
         with:
           name: image-amd64-${{ matrix.branch }}
 
       - name: Download image
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         uses: actions/download-artifact@v4
         with:
           name: image-arm64-${{ matrix.branch }}
 
       - name: Load Image
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         run: |
           docker load --input image-amd64.tar
           docker load --input image-arm64.tar
 
       - name: Push
+        if:  (github.event.inputs.branch || matrix.branch) == matrix.branch
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -117,7 +135,7 @@ jobs:
           docker manifest create kubeovn/kube-ovn-base:$TAG kubeovn/kube-ovn-base:$TAG-amd64 kubeovn/kube-ovn-base:$TAG-arm64
           docker manifest push kubeovn/kube-ovn-base:$TAG
 
-          if [ "${{ matrix.branch }}" == "master" || "${{ matrix.branch }}" == "release-1.11" ]; then
+          if [ "${{ matrix.branch }}" = "master" -o "`printf '${{ matrix.branch }}\nrelease-1.11' | sort -Vr | head -n1`" = "${{ matrix.branch }}" ]; then
             docker push kubeovn/kube-ovn-base:$TAG-debug-amd64
             docker push kubeovn/kube-ovn-base:$TAG-debug-arm64
             docker manifest create kubeovn/kube-ovn-base:$TAG-debug kubeovn/kube-ovn-base:$TAG-debug-amd64 kubeovn/kube-ovn-base:$TAG-debug-arm64
